--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainLevel.MainLevel
 EditorStartupMap=/Game/Levels/MainLevel.MainLevel
+GlobalDefaultGameMode=/Game/GameModes/TreesGameModeBP.TreesGameModeBP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
